# 16_swot_recomendations

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/vidmarswot/: crew.py  logger.py  main.py
src/vidmarswot/config/: agents.yaml  tasks.yaml
