[project]
name = "vidmarswot"
version = "0.1.0"
description = "vidmarswot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0",
]

[project.scripts]
vidmarswot = "vidmarswot.main:run"
run_crew = "vidmarswot.main:run"
train = "vidmarswot.main:train"
replay = "vidmarswot.main:replay"
test = "vidmarswot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
